--- a/index.html
+++ b/index.html
@@ -154,18 +154,26 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Costumizable Gun System</h1>
-            <h2> <b> (2021)</b> </h2>
+            <h1>Airport Gate System</h1>
+            <h2> <b> (2023)</b> </h2>
           </div>
-            <img src="./assets/gifs/example1.gif" width="100"; height="100">
+            <img src="./assets/gifs/example6.gif" width="100"; height="100">
         </div>
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Simple Boat Chassis</h1>
-            <h2> <b> (2020)</b> </h2>
+            <h1>Mannequin System</h1>
+            <h2> <b> (2023)</b> </h2>
           </div>
-            <img src="./assets/gifs/example2.gif" width="100"; height="100">
+            <img src="./assets/gifs/example5.gif" width="100"; height="100">
+        </div>
+
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Costumizable Gun System</h1>
+            <h2> <b> (2021)</b> </h2>
+          </div>
+            <img src="./assets/gifs/example1.gif" width="100"; height="100">
         </div>
 
         <div class="project-item">
@@ -178,18 +186,18 @@
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Interactable Game Menu</h1>
+            <h1>Simple Boat Chassis</h1>
             <h2> <b> (2020)</b> </h2>
           </div>
-            <img src="./assets/gifs/example4.gif" width="100"; height="100">
+            <img src="./assets/gifs/example2.gif" width="100"; height="100">
         </div>
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Modular UI</h1>
-            <h2> <b> (2022)</b> </h2>
+            <h1>Interactable Game Menu</h1>
+            <h2> <b> (2019)</b> </h2>
           </div>
-            <img src="./assets/gifs/example5.gif" width="100"; height="100">
+            <img src="./assets/gifs/example4.gif" width="100"; height="100">
         </div>
 
         </div>
@@ -209,7 +217,7 @@
           <div class="icon"><img src="https://cdn3.iconfinder.com/data/icons/social-network-flat-3/100/Discord-64.png" /></div>
           <div class="contact-info">
             <h1>Discord</h1>
-            <h2>You can contact me on Discord by adding me at <b>knifes#8495</b>.</h2>
+            <h2>You can contact me on Discord by adding me at <b>davidhatesyou#8495</b>.</h2>
           </div>
         </div>
         <div class="contact-item">
