Portfolio website update.
:p

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>D</span>avid <span>L</span>inko</h1>
+            <h1><span>N</span>ARCIX</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -41,7 +41,7 @@
         <h1>Hey, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>David <span></span></h1>
-        <h1>aka.<span></span> Bandivity <span></span></h1>
+        <h1>aka.<span></span> narcix6 <span></span></h1>
         <a href="#projects" type="button" class="cta">Projects</a>
       </div>
     </div>
@@ -53,7 +53,7 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>With over 6+ years of being on the ROBLOX platform I have acquired a decent amount of skills, including but not limited to:</p>
+        <p>With over 6+ years of being on the ROBLOX platform I've acquired a handful of skills, including but not limited to:</p>
       </div>
 
       <div class="service-bottom">
@@ -94,7 +94,7 @@
             <img src="https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/optimized/4X/0/e/6/0e6e05440c19c7614754bc83e1d0a82d171e3db5_2_500x500.png" alt="img">
           </div>
         </div>
-        
+
         <div class="project-item">
           <div class="project-info">
             <h1>Valheart</h1>
@@ -142,7 +142,6 @@
       </div>
     </div>
   </section>
-
   <!-- End Projects Section -->
 
   <!-- Examples Section -->
@@ -202,10 +201,9 @@
 
         </div>
       </div>
-    </div>
   </section>
   <!-- End Examples Section -->
-  
+
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
@@ -216,29 +214,23 @@
         <div class="contact-item">
           <div class="icon"><img src="https://cdn3.iconfinder.com/data/icons/social-network-flat-3/100/Discord-64.png" /></div>
           <div class="contact-info">
-            <h1>Discord</h1>
-            <h2>You can contact me on Discord by adding me at <b>davidhatesyou#8495</b>.</h2>
+            <h1><b>Discord</b></h1>
+            <h2>You can contact me on Discord by adding me at <b>davidhatesyou#8495</b></h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPFFHGHp7Ly12DfpMc32GVBu3MBH3dZC0VNpWzM5L_iHgDnYI9SoY1&usqp=CAE&s" /></div>
           <div class="contact-info">
-            <h1>Talent Hub</h1>
+            <h1><b>Talent Hub</b></h1>
             <h2> Send me a work invite through my Talent Hub <u> <a href="https://create.roblox.com/talent/creators/10901586">profile</a></u>. </h2>
           </div>
         </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" /></div>
-          <div class="contact-info">
-            <h1>Email</h1>
-            <h2>linkodavid.bidness@gmail.com</h2>
-          </div>
         </div>
       </div>
     </div>
   </section>
   <!-- End Contact Section -->
-
+  
   <!-- Footer -->
   <div id="bubble-wrapper">
   </div>
@@ -246,7 +238,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>D</span>avid <span>L</span>inko</h1>
+        <h1><span>N</span>ARCIX ™</h1>
       </div>
       <div class="social-icon">
         <div class="social-item">
